fix: align open chat room Icon to the left side of screen

--- a/packages/webapp/styles/_mobile.scss
+++ b/packages/webapp/styles/_mobile.scss
@@ -15,6 +15,12 @@
   }
 
   .ProseMirror {
+    .heading {
+      &[level='1'] {
+        border: none;
+      }
+    }
+
     .title {
       padding-right: 40px;
     }
